--- a/robotour/app/src/main/AndroidManifest.xml
+++ b/robotour/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.location" android:required="true" />
     <uses-feature android:name="android.hardware.location.gps" android:required="false" />
@@ -19,6 +21,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
+        <meta-data android:name="com.here.sdk.access_key_id" android:value="sowSPLgLyPUV2N9TIMo6QA"/>
+        <meta-data android:name="com.here.sdk.access_key_secret" android:value="PSgclTdxBtRW9BpaUKtiT1oNzBBNwgbVnzXGDbK11s8y5jeHy5mMCzP-0_M-_es0AhyHBTvnQRrvdXUwJUNcMg"/>
         <activity android:name=".DestinationInformation"></activity>
         <activity android:name=".RideShare"
             android:parentActivityName=".Destination"/>
